--- a/DUY.API/DUY.API.csproj
+++ b/DUY.API/DUY.API.csproj
@@ -23,6 +23,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="NAudio" Version="2.2.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Realm" Version="11.7.0" />
 		<PackageReference Include="RestSharp" Version="108.0.1" />
@@ -38,6 +39,10 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\DUY.Framework.Validator\DUY.Framework.Validator.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="data\duy_files\" />
 	</ItemGroup>
 
 
